--- a/app/src/main/res/values-ca/strings.xml
+++ b/app/src/main/res/values-ca/strings.xml
@@ -1,18 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
     <string name="create_new_group">Crear un nou grup</string>
     <string name="all">Tot</string>
-    <plurals name="all_desc">
+    <plurals name="all_desc" tools:ignore="MissingQuantity">
         <item quantity="one">%1$d Article arxivat</item>
         <item quantity="other">%1$d Articles arxivats</item>
     </plurals>
     <string name="unread">Sense llegir</string>
-    <plurals name="unread_desc">
+    <plurals name="unread_desc" tools:ignore="MissingQuantity">
         <item quantity="one">%1$d Article sense llegir</item>
         <item quantity="other">%1$d Articles sense llegir</item>
     </plurals>
     <string name="starred">Destacat</string>
-    <plurals name="starred_desc">
+    <plurals name="starred_desc" tools:ignore="MissingQuantity">
         <item quantity="one">%1$d Article destacat</item>
         <item quantity="other">%1$d Articles destacats</item>
     </plurals>
@@ -68,7 +68,7 @@
     <string name="all_deny_parse_full_content_toast">Aturar el processament del contingut de tots els articles del grup \"%1$s\"</string>
     <string name="clear_articles_in_group_toast">S\'han buidat tots els articles arxivats de la font \"%1$s\"</string>
     <string name="tos_tips">Si us plau llegeix i accepta els termes de servei i la política de privacitat de Read You per continuar.</string>
-    <string name="tos_content"><h5> Política de privacitat </h5> <br/> <p> Ens prenem la teva privadesa molt seriosament. </p> <br/> <p> <b>Read You</b> no recull cap dada d\'usuari i tota la informació sensible (contrasenyes i altra informació del compte) s\'emmagatzema de manera segura a la base de dades local d\'aplicacions del vostre dispositiu. </p> <br/> <p> <b>Read You</b> utilitzarà els permisos següents per oferir-vos el servei. </p> <br/> <p> - Permís d\'accés a la xarxa (per accedir al contingut en línia tal com especifiqueu) </p> <p> - Obtenir permís d\'estat de la xarxa (per determinar si el dispositiu té condicions de xarxa disponibles actualment) </p> <p> - Permís de servei de fons (per sincronitzar automàticament els teus preferits de manera regular) </p> <br/> <br/> <h5> Serveis de tercers </h5> <br/> <p> Aquesta política no s\'aplica als serveis de tercers que utilitzeu amb <b>Read You</b>. Podeu revisar les polítiques de privadesa dels serveis de tercers que feu servir als seus llocs web </p> <br/> <br/> <h5> Exempcions de responsabilitat </h5> <br/> <p> <b>Read You</b> només és una eina de recollida de contingut. El vostre ús de <b>Read You</b> està subjecte a les lleis i regulacions del vostre país i regió, i qualsevol responsabilitat derivada de les vostres accions anirà a càrrec vostre personalment. </p> <br/> <br/> <h5> Llicència de codi obert </h5> <br/> <p> <b>Read You</b> és un projecte de codi obert sota el codi obert GNU GPL 3.0 Llicència[1], que us permet utilitzar, fer referència i modificar el codi font de <b>Read You</b> de manera gratuïta, però no permet distribuir i vendre el codi modificat i derivat com a codi tancat. programari comercial. Per obtenir més informació, consulteu la Llicència de codi obert GNU GPL 3.0 completa[2]. </p> <br/> <br/> <h5> Apèndix </h5> <br/> <p> - [1] https://github.com/Ashinch/ReadYou </p> <p> - [2] https://www.gnu.org/licenses/gpl-3.0.html </p></string>
+    <string name="tos_content"><h5> Política de privacitat </h5> <br /> <p> Ens prenem la teva privadesa molt seriosament. </p> <br /> <p> <b>Read You</b> no recull cap dada d\'usuari i tota la informació sensible (contrasenyes i altra informació del compte) s\'emmagatzema de manera segura a la base de dades local d\'aplicacions del vostre dispositiu. </p> <br /> <p> <b>Read You</b> utilitzarà els permisos següents per oferir-vos el servei. </p> <br /> <p> - Permís d\'accés a la xarxa (per accedir al contingut en línia tal com especifiqueu) </p> <p> - Obtenir permís d\'estat de la xarxa (per determinar si el dispositiu té condicions de xarxa disponibles actualment) </p> <p> - Permís de servei de fons (per sincronitzar automàticament els teus preferits de manera regular) </p> <br /> <br /> <h5> Serveis de tercers </h5> <br /> <p> Aquesta política no s\'aplica als serveis de tercers que utilitzeu amb <b>Read You</b>. Podeu revisar les polítiques de privadesa dels serveis de tercers que feu servir als seus llocs web </p> <br /> <br /> <h5> Exempcions de responsabilitat </h5> <br /> <p> <b>Read You</b> només és una eina de recollida de contingut. El vostre ús de <b>Read You</b> està subjecte a les lleis i regulacions del vostre país i regió, i qualsevol responsabilitat derivada de les vostres accions anirà a càrrec vostre personalment. </p> <br /> <br /> <h5> Llicència de codi obert </h5> <br /> <p> <b>Read You</b> és un projecte de codi obert sota el codi obert GNU GPL 3.0 Llicència[1], que us permet utilitzar, fer referència i modificar el codi font de <b>Read You</b> de manera gratuïta, però no permet distribuir i vendre el codi modificat i derivat com a codi tancat. programari comercial. Per obtenir més informació, consulteu la Llicència de codi obert GNU GPL 3.0 completa[2]. </p> <br /> <br /> <h5> Apèndix </h5> <br /> <p> - [1] https://github.com/Ashinch/ReadYou </p> <p> - [2] https://www.gnu.org/licenses/gpl-3.0.html </p></string>
     <string name="primary_color">Colors primaris</string>
     <string name="amoled_dark_theme">Tema fosc AMOLED</string>
     <string name="open_source_licenses">Llicències de codi obert</string>
