--- a/app/src/main/res/values-in-rID/strings.xml
+++ b/app/src/main/res/values-in-rID/strings.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
     <string name="all">Semua</string>
-    <plurals name="all_desc">
+    <plurals name="all_desc" tools:ignore="UnusedQuantity">
         <item quantity="one">%1$d Artikel Diarsipkan</item>
         <item quantity="other">%1$d Artikel Diarsipkan</item>
     </plurals>
     <string name="unread">Belum Dibaca</string>
-    <plurals name="unread_desc">
+    <plurals name="unread_desc" tools:ignore="UnusedQuantity">
         <item quantity="one">%1$d Artikel Belum Dibaca</item>
         <item quantity="other">%1$d Artikel Belum Dibaca</item>
     </plurals>
     <string name="starred">Dibintangi</string>
-    <plurals name="starred_desc">
+    <plurals name="starred_desc" tools:ignore="UnusedQuantity">
         <item quantity="one">%1$d Artikel Dibintangi</item>
         <item quantity="other">%1$d Artikel Dibintangi</item>
     </plurals>
@@ -109,7 +109,7 @@
     <string name="browse_tos_tips">Pelajari lebih lanjut &lt;i&gt;&lt;u&gt;Syarat Penggunaan Layanan dan Kebijakan Privasi&lt;/u&gt;&lt;/i&gt;
     </string>
     <string name="terms_of_service">Syarat Menggunakan Layanan</string>
-    <string name="tos_content"><h5> Kebijakan Privasi </h5> <br/> <p> Kami menjaga privasi Anda dengan serius. </p> <br/> <p> <b>Read You</b> tidak menyimpan data penggunanya sama sekali. Semua informasi sensitif (sandi ataupun informasi akun lainnya) disimpan dengan aman di database lokal dari aplikasi yang ada di perangkat Anda. </p> <br/> <p> <b>Read You</b> akan menggunakan izin berikut untuk menyediakan layanan kepada Anda. </p> <br/> <p> - Izin untuk mengakses jaringan (untuk mengakses konten daring yang Anda tentukan) </p> <p> - Izin untuk melihat status jaringan (untuk mengetahui apakah perangkat saat ini memiliki kesediaan jaringan) </p> <p> - Izin untuk tetap aktif di latar belakang (untuk otomatis menyinkronkan konten favorit Anda secara teratur) </p> <br/> <br/> <h5> Layanan Pihak Ketiga </h5> <br/> <p> Kebijakan ini tidak berlaku untuk layanan pihak ketiga yang Anda gunakan dengan <b>Read You</b>. Anda dapat meninjau kebijakan privasi dari layanan pihak ketiga yang Anda gunakan di situs web mereka. </p> <br/> <br/> <h5> Perlu Diingat </h5> <br/> <p> <b>Read You</b> adalah alat pengumpul konten saja. Penggunaan <b>Read You</b> tunduk pada hukum dan peraturan negara dan wilayah Anda, dan setiap kewajiban yang muncul dari tindakan Anda akan ditanggung Anda secara pribadi. </p> <br/> <br/> <h5> Lisensi Sumber Terbuka </h5> <br/> <p> <b>Read You</b> adalah proyek Sumber Terbuka di bawah Lisensi Sumber Terbuka GNU GPL 3.0[1], yang memungkinkan Anda untuk menggunakan, mereferensikan, dan memodifikasi Kode Sumber <b>Read You</b> secara bebas, tetapi tidak mengizinkan kode yang dimodifikasi dan diturunkan untuk didistribusikan dan dijual sebagai perangkat lunak sumber tertutup. Untuk detailnya, silakan lihat Lisensi Sumber Terbuka GNU GPL 3.0 secara lengkap[2]. </p> <br/> <br/> <h5> Lampiran </h5> <br/> <p> - [1] https://github.com/Ashinch/ReadYou </p> <p> - [2] https://www.gnu.org/licenses/gpl-3.0.html </p></string>
+    <string name="tos_content"><h5> Kebijakan Privasi </h5> <br /> <p> Kami menjaga privasi Anda dengan serius. </p> <br /> <p> <b>Read You</b> tidak menyimpan data penggunanya sama sekali. Semua informasi sensitif (sandi ataupun informasi akun lainnya) disimpan dengan aman di database lokal dari aplikasi yang ada di perangkat Anda. </p> <br /> <p> <b>Read You</b> akan menggunakan izin berikut untuk menyediakan layanan kepada Anda. </p> <br /> <p> - Izin untuk mengakses jaringan (untuk mengakses konten daring yang Anda tentukan) </p> <p> - Izin untuk melihat status jaringan (untuk mengetahui apakah perangkat saat ini memiliki kesediaan jaringan) </p> <p> - Izin untuk tetap aktif di latar belakang (untuk otomatis menyinkronkan konten favorit Anda secara teratur) </p> <br /> <br /> <h5> Layanan Pihak Ketiga </h5> <br /> <p> Kebijakan ini tidak berlaku untuk layanan pihak ketiga yang Anda gunakan dengan <b>Read You</b>. Anda dapat meninjau kebijakan privasi dari layanan pihak ketiga yang Anda gunakan di situs web mereka. </p> <br /> <br /> <h5> Perlu Diingat </h5> <br /> <p> <b>Read You</b> adalah alat pengumpul konten saja. Penggunaan <b>Read You</b> tunduk pada hukum dan peraturan negara dan wilayah Anda, dan setiap kewajiban yang muncul dari tindakan Anda akan ditanggung Anda secara pribadi. </p> <br /> <br /> <h5> Lisensi Sumber Terbuka </h5> <br /> <p> <b>Read You</b> adalah proyek Sumber Terbuka di bawah Lisensi Sumber Terbuka GNU GPL 3.0[1], yang memungkinkan Anda untuk menggunakan, mereferensikan, dan memodifikasi Kode Sumber <b>Read You</b> secara bebas, tetapi tidak mengizinkan kode yang dimodifikasi dan diturunkan untuk didistribusikan dan dijual sebagai perangkat lunak sumber tertutup. Untuk detailnya, silakan lihat Lisensi Sumber Terbuka GNU GPL 3.0 secara lengkap[2]. </p> <br /> <br /> <h5> Lampiran </h5> <br /> <p> - [1] https://github.com/Ashinch/ReadYou </p> <p> - [2] https://www.gnu.org/licenses/gpl-3.0.html </p></string>
     <string name="agree">Setuju</string>
     <string name="wallpaper_colors">Warna Wallpaper</string>
     <string name="no_palettes">Tidak ada palet</string>
